# Yandex-School-of-Data-Analysis

./: README.md
Algo/Contest1/: CMakeLists.txt  RandomC.h  main.cpp  problemA.h  problemB.h  problemC.h  problemCC.h  problemCCC.h  problemD.h  seminar.h
Algo/Contest2/: CMakeLists.txt  Coler.h  CoverCircle.h  Distances.h  Distances2.h  DistancesFourie.h  Footballers.h  Heap.h  MaxCommonSequence.h  Sort.h  Sort2.h  main.cpp  test.h
Algo/Contest3/: AliBaba.h  AliBaba2.h  CMakeLists.txt  FixedHashSet.h  FixedSet.h  KthStatistics.h  Triangles.h  main.cpp  stress_test_fixed_set
Algo/Contest4/: CMakeLists.txt  CountStream.h  CountTrees.h  FixedSet.h  Kingdoms.h  Relatives.h  TreeOrder.h  main.cpp  mda.cpp  stress_test_fixed_set
Algo/Contest5/: CMakeLists.txt  Cyclic.h  Directors.h  Duche.h  MinTree.h  SecretAgents.h  main.cpp
Algo/Seminars/: CMakeLists.txt  main.cpp  seminar1subsegments.h  seminar2topk.h  seminar2topkdirty.h  seminar4squares.h  seminar7segments.h  seminar7segments_arrays.h  seminar7segments_fenwick.h  seminar7stress  seminar8counting.h
Algo2/Contest1/: A.h  B.h  C.h  CMakeLists.txt  D.h  E.h  main.cpp
Algo2/Contest2/: Aho_Corasick.h  CMakeLists.txt  coraseck_send.h  main.cpp
Algo2/Contest3/: A.h  AA.h  B.h  BB.h  BBB.h  CMakeLists.txt
Algo2/Contest4/: A.h  CMakeLists.txt
Algo2/Contest5/: A.h  C.h  CMakeLists.txt  D.h  E_MailingRobot.h  E_MailingRobotML.h  Stress.h  (+1 more)
Cpp/YandexCpp3/: CMakeLists.txt  dungeon.h  example.cpp  ring_buffer.h  rogue.h  stack.h  static_map.h  test.cpp  test_dungeon.cpp  test_ring_buffer.cpp  test_static_map.cpp
(+103 files in other folders)
